@@ -17,7 +17,7 @@ HOSTS:
       epel:
         mirrorlist: 'https://mirrors.fedoraproject.org/metalink?repo=epel-7&arch=$basearch'
         gpgkeys:
-          - https://getfedora.org/static/352C64E5.txt
+          - https://dl.fedoraproject.org/pub/epel/RPM-GPG-KEY-EPEL-$releasever
       simp:
         baseurl: 'https://packagecloud.io/simp-project/6_X/el/$releasever/$basearch'
         gpgkeys:
@@ -31,7 +31,7 @@ HOSTS:
           - https://yum.puppetlabs.com/RPM-GPG-KEY-puppetlabs
           - https://yum.puppetlabs.com/RPM-GPG-KEY-puppet
           - https://apt.postgresql.org/pub/repos/yum/RPM-GPG-KEY-PGDG-94
-          - https://getfedora.org/static/352C64E5.txt
+          - https://dl.fedoraproject.org/pub/epel/RPM-GPG-KEY-EPEL-$releasever
 
   el6:
     roles:
@@ -43,7 +43,7 @@ HOSTS:
       epel:
         mirrorlist: 'https://mirrors.fedoraproject.org/metalink?repo=epel-6&arch=$basearch'
         gpgkeys:
-          - https://getfedora.org/static/0608B895.txt
+          - https://dl.fedoraproject.org/pub/epel/RPM-GPG-KEY-EPEL-$releasever
       simp:
         baseurl: 'https://packagecloud.io/simp-project/6_X/el/$releasever/$basearch'
         gpgkeys:
@@ -57,7 +57,7 @@ HOSTS:
           - https://yum.puppetlabs.com/RPM-GPG-KEY-puppetlabs
           - https://yum.puppetlabs.com/RPM-GPG-KEY-puppet
           - https://apt.postgresql.org/pub/repos/yum/RPM-GPG-KEY-PGDG-94
-          - https://getfedora.org/static/352C64E5.txt
+          - https://dl.fedoraproject.org/pub/epel/RPM-GPG-KEY-EPEL-$releasever
 
 CONFIG:
   log_level: verbose
